# Functional-Consultant-Resource-Matcher

./: .env.example  .gitignore  CLAUDE.md  README.md  TASK_REQUIREMENTS.md  WHY_THIS_MVP.md  main.py  pyproject.toml
data/: consultant_database.xlsx  ~$consultant_database.xlsx
docs/: process-flow.html
scripts/: seed_excel.py
src/: logging_config.py
src/api/: app.py  server.py
src/api/routes/: levels.py  pipeline.py  skills.py  user_skills.py  users.py
src/cache/: prompt_cache.py
src/client/: api_client.py  http_client.py  mock_client.py
src/db/: excel_db.py
src/models/: schemas.py
src/reports/: docx_generator.py
src/ui/: app.py  components.py  styles.py
src/workflow/: graph.py  state.py  utils.py
src/workflow/llm/: client.py  embeddings.py  mock_llm.py  prompts.py  tools.py
src/workflow/nodes/: compute_strength.py  generate_report.py  generate_solution.py  load_resources.py  score_resources.py  web_search.py
tests/: conftest.py  test_api_client.py  test_components.py  test_docx_generator.py  test_embeddings.py  test_excel_db.py  test_graph_integration.py  test_logging_config.py  test_models.py  test_node_load.py  test_node_report.py  test_node_score.py  test_node_search.py  test_node_solution.py  test_node_strength.py  test_pipeline_route.py  test_routes_levels.py  test_routes_skills.py  test_routes_user_skills.py  test_routes_users.py  test_workflow_state.py
